--- a/HTML Project.html
+++ b/HTML Project.html
@@ -83,7 +83,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Redes y Comunicaciones</p>
+        <p>&copy; 2025 Redes y Comunicaciones</p>
+        <p>&copy; Javier Ordaz, Cristopher Tabata, Lizandro Martinez, Jean Carlos Sequea</p>
     </footer>
 </body>
 </html>
